# rhizo-cli

./: Cargo.toml  api.toml  fn.wasm  index.toml
src/: client.rs  commands.rs  error.rs  main.rs  types.rs  utils.rs
