[package]
name = "rhizo-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "rhizo-cli"
test = false
bench = false

[dependencies]
solana-sdk = "1.17.2"
solana-client = "1.17.2"
rhizo-types = "0.1.9"
borsh = "0.10.3"
solana-program = "1.17.2"
yaml-rust = "0.4.5"
home = "0.5.5"
toml = "0.7.6"
serde = "1.0.188"
serde_derive = "1.0.188"
iroh-blake3 = "1.4.3"
bs58 = "0.5.0"
base64 = "0.21.3"
hyper = "0.14.27"
serde_json = "1.0.106"
tokio = "1.32.0"
spinners = "4.1.0"
rmp = "0.8.12"
wasix = "0.12.21"
wasmer = "4.2.1"
wasmer-wasix = "0.14.0"
dialoguer = "0.11.0"
bincode = "1.3.3"
b64 = "0.4.0"
reqwest = "0.11.22"
